--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
-@plugin "flowbite/plugin";
-@source "../node_modules/flowbite";
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap");
-@import "flowbite/src/themes/default";
+.Auth-container {
+  background-image: url("../src/assets/AuthBackground.png");
+  background-position: center center;
+  background-size: cover;
+}
