--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 @import "tailwindcss";
+@import "flowbite-react/plugin/tailwindcss";
+@source "../.flowbite-react/class-list.json";
 
-.Auth-container {
-  background-image: url("../src/assets/AuthBackground.png");
-  background-position: center center;
-  background-size: cover;
+@layer utilities {
+  .Auth-container {
+    background-image: url("./assets/AuthBackground.png");
+    background-position: center center;
+    background-size: cover;
+  }
 }
