--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,9 @@
     background-size: cover;
   }
 }
-
+.form-layout {
+  background-color: rgba(49, 74, 89, 0.9);
+}
 .input-img {
   margin: auto;
   display: flex;
