--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "flowbite-react/plugin/tailwindcss";
 @source "../.flowbite-react/class-list.json";
+@variant dark (&:where(.dark, .dark *));
 
 @layer utilities {
   .Auth-container {
